# bookwyrm-client

./: .gitignore  .readthedocs.yaml  Makefile  README.md  TUTORIAL.md  conftest.py  flake.nix  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-integration.txt  requirements.txt  tox.ini
.github/workflows/: publish-to-pypi.yml
bookwyrm/: __init__.py  async_client.py  cli.py  client.py  main.py  models.py
bookwyrm_client/: __init__.py  async_client.py  cli.py  client.py  main.py  models.py
data/: country-of-the-blind.txt  jsonld.py  summary.py
docs/: README.md  ai.md  cli-guide.md  cli.md  client-guide.md  conftest.py  contributing.md  examples.md  getting-started.md  index.md  pytest.ini  requirements.txt  tutorials.md
docs/api/: async-client.md  client.md  index.md  models.md
integration/: README.md  conftest.py  pytest.ini
integration/test_cli/: conftest.py  test_cite_command.py  test_classify_command.py  test_extract_pdf_command.py  test_other_commands.py  test_phrasal_command.py  test_summarize_command.py
integration/test_library/: __init__.py  conftest.py  test_async_client.py  test_models.py  test_sync_client.py
integration/test_library/async/: test_citations.py  test_classify.py  test_other.py  test_pdf.py  test_phrasal.py  test_summarize.py
integration/test_library/sync/: test_citations.py  test_classify.py  test_other.py  test_pdf.py  test_phrasal.py  test_summarize.py
src/bookwyrm/: __init__.py  async_client.py  cli.py  client.py  models.py  utils.py
