[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookwyrm-client"
version = "0.1.0"
description = "A client library for BookWyrm"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "typer>=0.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/yourusername/bookwyrm-client"
Repository = "https://github.com/yourusername/bookwyrm-client"

[project.scripts]
bookwyrm-client = "bookwyrm_client.main:main"

[project.entry-points."bookwyrm_client.commands"]
cite = "bookwyrm_client.cli:cite"
cite-url = "bookwyrm_client.cli:cite_url"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
