[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookwyrm"
version = "0.1.3"
description = "A client library for BookWyrm"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Gavin Mendel-Gleason", email = "gavin@scidonia.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.25.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "typer>=0.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://bookwyrm.ai"
Repository = "https://github.com/scidonia/bookwyrm"

[project.scripts]
bookwyrm = "bookwyrm.main:main"

[project.entry-points."bookwyrm.commands"]
cite = "bookwyrm.cli:cite"
cite-url = "bookwyrm.cli:cite_url"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
