[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookwyrm"
version = "0.1.13"
description = "A client library for BookWyrm"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Gavin Mendel-Gleason", email = "gavin@scidonia.ai" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
  "requests>=2.25.0",
  "httpx>=0.24.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "typer>=0.19.2",
  "sseclient-py>=1.7.0",
  "httpx-sse>=0.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=6.0",
  "pytest-asyncio>=0.21.0",
  "black>=22.0",
  "flake8>=4.0",
  "mypy>=0.900",
  "click>=8.0.0",
  "mkdocs-typer>=0.0.3",
  "mkdocs-click>=0.9.0",
]

[project.urls]
Homepage = "https://bookwyrm.ai"
Repository = "https://github.com/scidonia/bookwyrm"

[project.scripts]
bookwyrm = "bookwyrm.main:main"

[project.entry-points."bookwyrm.commands"]
cite = "bookwyrm.cli:cite"
cite-url = "bookwyrm.cli:cite_url"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
  "pytest>=6.0",
  "pytest-asyncio>=0.21.0",
  "black>=22.0",
  "flake8>=4.0",
  "mypy>=0.900",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.21",
  "mkdocs-section-index>=0.3.10",
  "mkdocstrings[python]>=0.30.1",
  "pymdown-extensions>=10.16.1",
  "mkdocs-click>=0.8.0",
  "mkdocs-typer>=0.0.3",
  "mkdocstrings-python>=1.18.2",
  "tox>=4.30.2",
  "tox-uv>=1.28.0",
]
